# RALF

./: .gitignore  LICENSE  LICENSES-DATA.md  LICENSES-RULES.md  README.md  pyproject.toml  setup.sh
docs/: bash-evasion-hardening.md
ralf/: __init__.py
ralf/adapters/: __init__.py  _base.py  claude_code.py  claude_code_posttooluse.py  codex_cli.py  codex_pretooluse.py  gemini_cli.py
ralf/core/: __init__.py  audit.py  event.py
ralf/dashboard/: __init__.py  app.py
ralf/data/: cwe_top25.json  gtfobins_capabilities.json  gtfobins_round_7.rules.yaml  learned_rules.yaml  loobins_capabilities.json  mitre_attack_linux.json  mitre_attack_macos.json  mscp_rules.json  owasp_asvs_v5.json  owasp_top10_2021.json
ralf/detection/: __init__.py  astgrep_adapter.py  asvs_mapping.py  bandit_adapter.py  code_scanner.py  command_intent.py  cwe_registry.py  deobfuscate.py  intent_flow.py  owasp_mapping.py  ruff_adapter.py  semgrep_adapter.py  semgrep_rulesets.py  sensitive_paths.py  shell_normalize.py  supply_chain.py  supply_chain_content.py
ralf/discovery/: __init__.py  loobins_map.py
ralf/injection/: __init__.py  exfil.py  patterns.py  scanner.py  unicode_smuggle.py
ralf/linux/: __init__.py  rules_extractor.py
ralf/macos/: __init__.py  deobfuscate.py  intent_classifier.py  rules_extractor.py
ralf/mitre/: __init__.py  attack_linux.py  attack_macos.py
ralf/provenance/: __init__.py  drift.py  ledger.py  redaction.py  session.py  taint.py
ralf/scanner/: __init__.py  checks.py  credentials.py  linux.py  macos.py  mscp_macos.py  runner.py  sessions.py
ralf/shared/: cli.py  (+9 more)
(+46 files in other folders)
